--- a/src/components/css/Content.css
+++ b/src/components/css/Content.css
@@ -37,10 +37,13 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1) !important;
   cursor: pointer;
   transition: transform 0.3s ease;
+  background: linear-gradient(to bottom, #f0f0f0, #e0e0e0);
 }
 
 .service-item:hover {
   transform: translateY(-5px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  color: #ff69b4;
 }
 
 .service-item i {
@@ -50,8 +53,19 @@
 }
 
 .services-section h2 {
-  margin: 300px 0 120px 0px;
+  margin: 250px 0 120px 0px;
+  margin-bottom: 0;
   font-size: 3em;
+  text-align: center;
+  border-bottom: 3px solid #ff77a8;
+  width: 255px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.services-section p {
+  margin: 80px 0px 30px 0;
+  font-size: 1.3em;
+  color: #777;
 }
 
 .service-details {
@@ -75,6 +89,7 @@
   line-height: 1.6;
   font-size: 1.1em;
   color: #555;
+  margin: 0;
 }
 
 .hidden {
