--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-/* Общие настройки */
-
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Roboto:ital,wght@0,400;1,400&display=swap");
 html {
   box-sizing: border-box;
@@ -21,7 +19,6 @@ body {
   background-color: #ffffff;
 }
 
-/* Типографика */
 h1,
 h2,
 h3,
@@ -57,7 +54,6 @@ ol {
   list-style: none;
 }
 
-/* Формы */
 button,
 input,
 select,
@@ -65,31 +61,21 @@ textarea {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
-  margin: 0; /* Убрать отступы у элементов формы */
+  margin: 0;
 }
 
 button {
-  cursor: pointer; /* Курсор в виде руки при наведении на кнопку */
-  background-color: transparent; /* Прозрачный фон для кнопок */
-  border: none; /* Убрать рамку у кнопок */
-  padding: 0; /* Убрать отступы у кнопок */
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  padding: 0;
 }
 
-/* Изображения */
 img {
-  max-width: 100%;
+  /* max-width: 100%; */
   height: auto;
   vertical-align: middle;
 }
-
-/* Удаление стандартных стилей для определенных элементов (по желанию) */
-/* Можно раскомментировать, если нужно еще больше обнулить стили */
-/* button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border: 0;
-} */
 
 *,
 *::before,
