--- a/src/components/css/Content.css
+++ b/src/components/css/Content.css
@@ -121,6 +121,8 @@ h2 {
   margin: 0 auto;
   overflow: hidden;
   position: relative;
+  margin-top: 80px;
+  border-radius: 55px !important;
 }
 
 .slider {
@@ -164,13 +166,88 @@ h2 {
   width: 80%;
   margin: 20px auto;
   text-align: center;
+  margin-top: 55px;
 }
 
 .slide-description h3 {
   margin-bottom: 10px;
+  color: #ff77a8;
 }
 
 .slide-description p {
   font-size: 1.1em;
   color: #555;
+}
+
+.contact-section {
+  padding: 50px 0;
+  text-align: center;
+}
+
+.contact-section h2 {
+  margin-bottom: 20px;
+}
+
+.contact-section p {
+  margin-top: 25px;
+  margin-bottom: 80px;
+  font-size: 1.3em;
+  color: #777;
+}
+
+form {
+  width: 80%;
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: left;
+  color: #ff77a8;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+textarea {
+  height: 150px;
+}
+
+button[type="submit"] {
+  background-color: #ff77a8;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button[type="submit"]:hover {
+  background-color: #0056b3;
+}
+
+.success-message {
+  color: green;
+  margin-top: 10px;
+}
+
+.error-message {
+  color: red;
+  margin-top: 10px;
 }
